--- a/.github/workflows/01-Firstworkflow.yml
+++ b/.github/workflows/01-Firstworkflow.yml
@@ -1,10 +1,12 @@
 name: 01-Firstworkflow
-on: 
-    - workflow_dispatch
+on:
+    push:
+      branches:
+        - 'main'
+    workflow_dispatch:
 jobs:
-    echo-hello:
+    joaquin:
         runs-on: ubuntu-latest
         steps:
-            - name: Saludar
-              run: echo 'Hello world'
+            - run: echo 'Hello world'
             
