--- a/.github/workflows/01-Firstworkflow.yml
+++ b/.github/workflows/01-Firstworkflow.yml
@@ -2,7 +2,7 @@ name: 01-Firstworkflow
 on:
     push:
       branches:
-        - 'main'
+        - 'master'
     workflow_dispatch:
 jobs:
     joaquin:
