--- a/.github/workflows/01-Firstworkflow.yml
+++ b/.github/workflows/01-Firstworkflow.yml
@@ -9,4 +9,12 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - run: echo 'Hello world'
-            
+            - uses: actions/setup-node@v4
+              with:
+                node-version: 22
+            - name: Traer repositorio
+              uses: actions/checkout@v4
+            - name: Install dependencies
+              run: npm install
+            - name: Build project
+              run: npm run lint
