--- a/.github/workflows/Despliegue.yml
+++ b/.github/workflows/Despliegue.yml
@@ -17,6 +17,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
+            - run: ls
             - name: Install, build, and upload your site
               uses: withastro/action@v3
               with:
